# twi2slack

./: .env.example  .gitignore  Cargo.toml  README.md  manifest.yml
src/: command_event_handler.rs  fetch_rss.rs  main.rs  query.rs  send_message.rs  utils.rs
