[package]
name = "twit2slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-morphism = { version = "1.12.0", features = ["hyper","axum"]}
tokio = {version = "1.28.2", features = ["full"] }
tokio-stream = {version = "0.1.14",features = ["fs"]}
tokio-util = "0.7.8"
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures = "0.3.28"
http = "0.2.9"
url = "2.3.1"
reqwest = "0.11.18"
rss = "2.0.4"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"]}
chrono = "0.4.26"
scraper = "0.16.0"
regex = "1.8.4"
base64 = "0.21.2"
